--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 h1, h2, h3 {
+    color: #003642;
     font-family: Merriweather;
 }
 
@@ -34,6 +35,7 @@ h1 a:hover {
 }
 
 p, li {
+    color: #003642;
     font-size: 18px;
 }
 
